chore: implement checkout and custom text overlay

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@chakra-ui/react": "^1.4.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@stripe/stripe-js": "^1.13.2",
     "framer-motion": "^4",
     "gatsby": "^3.1.2",
     "gatsby-plugin-gatsby-cloud": "^2.1.0",
@@ -19,11 +20,13 @@
     "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
+    "node-polyfill-webpack-plugin": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.5"
+    "react-hook-form": "^6.15.5",
+    "use-shopping-cart": "^2.4.3"
   },
   "devDependencies": {
     "prettier": "2.2.1"
