chore: implement custom checkout flow

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.5",
     "react-icons": "^4.2.0",
+    "stripe": "^8.140.0",
     "use-shopping-cart": "^2.4.3"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "dev": "gatsby develop",
+    "nd": "netlify dev",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
