--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@react-pdf/renderer": "^2.0.3",
+    "@sanity/block-content-to-react": "^2.0.7",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
     "framer-motion": "^4",
@@ -21,6 +22,7 @@
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-source-sanity": "^7.0.3",
     "gatsby-transformer-sharp": "^3.1.0",
     "node-polyfill-webpack-plugin": "^1.1.0",
     "prop-types": "^15.7.2",
