--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11",
     "@react-pdf/renderer": "^2.0.3",
     "@sanity/block-content-to-react": "^2.0.7",
+    "@sendgrid/mail": "^7.4.2",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
     "framer-motion": "^4",
