--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^7.4.2",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
+    "country-codes-list": "^1.6.8",
     "framer-motion": "^4",
     "gatsby": "^3.1.2",
     "gatsby-plugin-gatsby-cloud": "^2.1.0",
