--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "gatsby-source-sanity": "^7.0.3",
     "gatsby-transformer-sharp": "^3.1.0",
     "node-polyfill-webpack-plugin": "^1.1.0",
+    "playwright-aws-lambda": "^0.6.0",
+    "playwright-core": "^1.10.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.2.3",
     "react-icons": "^4.2.0",
+    "react-textfit": "^1.1.1",
     "stripe": "^8.140.0",
     "use-shopping-cart": "^2.4.3"
   },
