--- a/netlify/functions/make-a-da-image/package.json
+++ b/netlify/functions/make-a-da-image/package.json
@@ -2,19 +2,12 @@
   "name": "make-a-da-image",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "XanderJL <me@alexlow.dev> (@XandyDandy)",
+  "author": "XanderJL",
   "license": "MIT",
+  "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.5.2",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "dom-to-image": "^2.6.0",
-    "framer-motion": "^4",
-    "playwright-aws-lambda": "^0.4.0",
-    "playwright-core": "^0.11.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-textfit": "^1.1.0"
+    "chrome-aws-lambda": "^8.0.2",
+    "playwright-core": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
