--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "gatsby-source-sanity": "^7.0.3",
     "gatsby-transformer-sharp": "^3.1.0",
     "node-polyfill-webpack-plugin": "^1.1.0",
-    "playwright-aws-lambda": "^0.6.0",
-    "playwright-core": "^1.10.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -48,7 +46,7 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
+    "build": "cd ./netlify/functions/make-a-da-image && yarn install && cd ../../.. && gatsby build",
     "develop": "gatsby develop",
     "dev": "gatsby develop",
     "nd": "netlify dev",
