--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-facebook-pixel": "^1.0.4",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.2.3",
     "react-icons": "^4.2.0",
